# gmn

./: README.md
assets/: logo.psd
gmn-frontend/: .env.example  next.config.mjs  package-lock.json  package.json
gmn-frontend/src/api/: resources.ts
gmn-frontend/src/api/exercise/: exercise.api.ts  exercise.dto.ts
gmn-frontend/src/api/feed/: feed.api.ts  feed.dto.ts
gmn-frontend/src/api/goals/: goals.api.ts  goals.dto.ts
gmn-frontend/src/api/macros/: macros.api.ts  macros.dto.ts  macros.utils.ts
gmn-frontend/src/api/user/: user.api.ts  user.dto.ts
gmn-frontend/src/api/workout/: workout.api.ts  workout.dto.ts
gmn-frontend/src/app/: globals.scss  index.module.scss  layout.tsx  page.tsx
gmn-frontend/src/app/admin/: admin.module.scss  client.tsx  page.tsx
gmn-frontend/src/app/explore/: page.tsx
gmn-frontend/src/app/feed/: page.tsx
gmn-frontend/src/utils/: cookies.ts  token.ts
gmn-server/: .env  .env.example  Cargo.toml  diesel.toml
gmn-server/crates/api/: Cargo.toml
gmn-server/crates/api-routes/: Cargo.toml
gmn-server/crates/api-routes/src/: dto.rs  lib.rs
gmn-server/crates/api-routes/src/exercise/: dto.rs  get.rs  mod.rs  post.rs
gmn-server/crates/api-routes/src/exercises/: post.rs
gmn-server/crates/api-routes/src/feed/: delete.rs  dto.rs  get.rs  helpers.rs  mod.rs  post.rs  put.rs
gmn-server/crates/api-routes/src/goals/: dto.rs  get.rs  helpers.rs  mod.rs  put.rs
gmn-server/crates/api-routes/src/macros/: dto.rs  get.rs  helpers.rs  mod.rs  put.rs
gmn-server/crates/api-routes/src/user/: dto.rs  get.rs  mod.rs  post.rs  put.rs
gmn-server/crates/api-routes/src/workout/: dto.rs  get.rs  helpers.rs  put.rs
gmn-server/crates/api/src/: lib.rs
gmn-server/crates/db/: Cargo.toml
gmn-server/crates/db-schema/: Cargo.toml
gmn-server/crates/db-schema/src/: models.rs  schema.rs
gmn-server/crates/db/src/: lib.rs
gmn-server/crates/db/src/crud/: exercise.rs  goals.rs  macros.rs  mod.rs  post.rs  user.rs  workout.rs
gmn-server/crates/utils/: Cargo.toml
gmn-server/crates/utils/src/: lib.rs
gmn-server/migrations/2024-05-12-024031_create_users/: up.sql
gmn-server/migrations/2024-05-12-024350_create_exercises/: up.sql
gmn-server/migrations/2024-05-12-024643_create_journals/: up.sql
gmn-server/migrations/2024-05-12-024643_create_workouts/: up.sql
gmn-server/migrations/2024-05-12-205807_create_usergroups/: up.sql
gmn-server/migrations/2024-05-16-225734_create_macros/: down.sql  up.sql
gmn-server/migrations/2024-05-22-183509_create_posts/: up.sql
gmn-server/migrations/2024-05-29-010235_create_personal_goals/: down.sql  up.sql
gmn-server/src/: main.rs
(+57 files in other folders)
