[workspace]
members = [
    "crates/api",
    "crates/api-routes",
    "crates/db",
    "crates/db-schema",
    "crates/utils"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["CKAY9"]
repository = "https://github.com/CKAY-9/gmn"
license = "AGPL-3.0"

[workspace.dependencies]
gmn_api = { version = "*", path = "./crates/api" }
gmn_api_routes = { version = "*", path = "./crates/api-routes" }
gmn_db = { version = "*", path = "./crates/db" }
gmn_db_schema = { version = "*", path = "./crates/db-schema" }
gmn_utils = { version = "*", path = "./crates/utils" }
diesel = { version = "2.1.6", features = ["postgres"] }
serde = { version = "1.0.201", features = ["derive"] }
actix-cors = "0.7.0"
actix-web = "4.5.1"
rand = "0.8.5"
sha2 = "0.10.8"
dotenv = "0.15.0"
iso8601 = "0.6.1"
serde_json = "1.0.117"
chrono = "0.4.38"
reqwest = "0.12.4"

[package]
name = "gmn_server"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
actix-cors = { workspace = true }
actix-web = { workspace = true }
dotenv = { workspace = true }
gmn_api = { workspace = true }
